# amigo

./: 404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md  installation.md
installation/: index.html
search/: search_index.json
src/amigo/: detector_models.py  fitting.py  misc.py  model_fits.py  optical_models.py  pipelines.py  plotting.py  ramp_models.py  read_models.py  stats.py  vis_analysis.py
